--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>bol.ai | Reasoning Core engine</title>
+    
+    <!-- Fonts & Icons -->
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
@@ -11,17 +13,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/tokyo-night-dark.min.css">
 
     <style>
-        :root { --bg: #030508; --sidebar-bg: #000000; --accent: #00f2ff; --secondary: #7000ff; --glass: rgba(255, 255, 255, 0.05); --border: rgba(255, 255, 255, 0.15); --text: #ffffff; --text-dim: #94a3b8; --msg-user: #1e293b; --msg-ai: #0f172a; --card-glow: rgba(0, 242, 255, 0.1); }
-        [data-theme="light"] { --bg: #f8fafc; --sidebar-bg: #ffffff; --accent: #0066ff; --secondary: #6200ea; --glass: rgba(0, 0, 0, 0.05); --border: rgba(0, 0, 0, 0.1); --text: #0f172a; --text-dim: #475569; --msg-user: #e2e8f0; --msg-ai: #ffffff; --card-glow: rgba(0, 102, 255, 0.05); }
+        :root {
+            --bg: #030508; --sidebar-bg: #000000; --accent: #00f2ff; --secondary: #7000ff;
+            --glass: rgba(255, 255, 255, 0.05); --border: rgba(255, 255, 255, 0.15);
+            --text: #ffffff; --text-dim: #94a3b8; --msg-user: #1e293b; --msg-ai: #0f172a; --card-glow: rgba(0, 242, 255, 0.1);
+        }
+        [data-theme="light"] {
+            --bg: #f8fafc; --sidebar-bg: #ffffff; --accent: #0066ff; --secondary: #6200ea;
+            --glass: rgba(0, 0, 0, 0.05); --border: rgba(0, 0, 0, 0.1); --text: #0f172a;
+            --text-dim: #475569; --msg-user: #e2e8f0; --msg-ai: #ffffff; --card-glow: rgba(0, 102, 255, 0.05);
+        }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Plus Jakarta Sans', sans-serif; }
         body { background: var(--bg); color: var(--text); height: 100dvh; display: flex; overflow: hidden; }
-        #sidebar { width: 320px; background: var(--sidebar-bg); border-right: 1px solid var(--border); display: flex; flex-direction: column; transition: 0.3s; z-index: 3000; }
+        #sidebar { width: 320px; background: var(--sidebar-bg); border-right: 1px solid var(--border); display: flex; flex-direction: column; transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1); z-index: 3000; }
         @media (max-width: 768px) { #sidebar { position: fixed; left: -320px; height: 100%; } #sidebar.open { left: 0; } }
         .sidebar-header { padding: 30px 25px; display: flex; justify-content: space-between; align-items: center; }
         .logo { font-size: 1.8rem; font-weight: 800; background: linear-gradient(45deg, var(--accent), var(--secondary)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
         .new-chat-btn { margin: 0 20px 20px; padding: 15px; border: 1px solid var(--accent); border-radius: 14px; background: transparent; color: var(--accent); cursor: pointer; display: flex; align-items: center; gap: 10px; font-weight: 700; transition: 0.3s; }
         .new-chat-btn:hover { background: var(--accent); color: #000; }
-        .big-link { padding: 18px 25px; font-size: 1.1rem; font-weight: 600; color: var(--text); display: flex; align-items: center; gap: 15px; cursor: pointer; border-bottom: 1px solid var(--border); }
+        .big-link { padding: 18px 25px; font-size: 1.1rem; font-weight: 600; color: var(--text); display: flex; align-items: center; gap: 15px; cursor: pointer; transition: 0.2s; border-bottom: 1px solid var(--border); }
+        .selector-wrapper { display: flex; gap: 10px; padding: 10px 20px; background: var(--bg); border-bottom: 1px solid var(--border); overflow-x: auto; scrollbar-width: none; }
+        .modern-select { appearance: none; background: var(--msg-user); color: var(--text); border: 1px solid var(--border); padding: 10px 20px; border-radius: 12px; font-size: 0.85rem; cursor: pointer; font-weight: 600; outline: none; min-width: 140px; text-align: center; }
         #main-content { flex: 1; display: flex; flex-direction: column; background: var(--bg); position: relative; width: 100%; }
         header { padding: 15px 25px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--border); }
         #chat-container { flex: 1; overflow-y: auto; padding: 25px; display: flex; flex-direction: column; gap: 30px; }
@@ -29,68 +41,75 @@
         .message { padding: 1.4rem; border-radius: 20px; line-height: 1.7; font-size: 1rem; position: relative; box-shadow: 0 5px 20px var(--card-glow); }
         .ai-msg { background: var(--msg-ai); border: 1px solid var(--border); align-self: flex-start; border-bottom-left-radius: 4px; }
         .user-msg { background: var(--msg-user); border: 1px solid var(--accent); align-self: flex-end; border-bottom-right-radius: 4px; }
-        .thinking-container { display: none; align-items: center; gap: 12px; color: var(--accent); font-weight: 600; padding: 10px 0; }
+        .thinking-container { display: none; align-items: center; gap: 12px; padding: 10px 0; color: var(--accent); font-weight: 600; }
         .input-area { padding: 25px; background: var(--bg); border-top: 1px solid var(--border); }
-        .input-box { display: flex; background: var(--sidebar-bg); border: 2px solid var(--border); padding: 10px 15px; border-radius: 18px; gap: 10px; }
-        textarea { flex: 1; background: transparent; border: none; color: var(--text); outline: none; resize: none; min-height: 45px; }
-        .send-btn { background: var(--accent); border: none; width: 45px; height: 45px; border-radius: 14px; cursor: pointer; }
+        .input-box { display: flex; background: var(--sidebar-bg); border: 2px solid var(--border); padding: 10px 15px; border-radius: 18px; align-items: flex-end; gap: 10px; }
+        textarea { flex: 1; background: transparent; border: none; color: var(--text); padding: 10px; outline: none; font-size: 1rem; resize: none; min-height: 45px; }
+        .send-btn { background: var(--accent); color: #000; border: none; width: 45px; height: 45px; border-radius: 14px; cursor: pointer; }
+        #maintenance-screen { display: none; position: fixed; inset: 0; background: #000; z-index: 9999; flex-direction: column; align-items: center; justify-content: center; text-align: center; }
         .modal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 90%; max-width: 600px; background: var(--sidebar-bg); border: 2px solid var(--accent); padding: 40px; border-radius: 25px; z-index: 4000; }
         #overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 2500; }
     </style>
 </head>
 <body data-theme="dark">
 
+    <div id="maintenance-screen">
+        <i class="fas fa-microchip" style="font-size: 5rem; color: var(--accent); margin-bottom: 20px;"></i>
+        <h1>Logic Core Recalibrating</h1>
+        <p>Vivek Dalvi is optimizing the network.</p>
+    </div>
+
     <div id="overlay" onclick="closeModals()"></div>
 
     <aside id="sidebar">
-        <div class="sidebar-header">
-            <span class="logo">bol.ai</span>
-            <i class="fas fa-times" style="cursor:pointer" onclick="toggleSidebar()"></i>
-        </div>
-        <button class="new-chat-btn" onclick="startNewChat()">
-            <i class="fas fa-plus"></i> <span>NEW SESSION</span>
-        </button>
-        <div id="history-list" style="flex:1; overflow-y:auto;"></div>
+        <div class="sidebar-header"><span class="logo">bol.ai</span><i class="fas fa-times" style="cursor:pointer" onclick="toggleSidebar()"></i></div>
+        <button class="new-chat-btn" onclick="startNewChat()"><i class="fas fa-plus"></i> <span>NEW SESSION</span></button>
+        <div class="history-container" style="flex:1; overflow-y:auto;" id="history-list"></div>
         <div class="sidebar-footer">
-            <div class="big-link" onclick="openModal('aboutModal')"><i class="fas fa-rocket"></i> About</div>
-            <div class="big-link" onclick="handleAuth()"><i class="fab fa-google"></i> <span id="auth-status">Login</span></div>
+            <div class="big-link" onclick="openModal('aboutModal')"><i class="fas fa-rocket"></i> About Us</div>
+            <div class="big-link" style="color:var(--accent)" onclick="handleAuth()"><i class="fab fa-google"></i> <span id="auth-status">Login with Google</span></div>
         </div>
     </aside>
 
     <main id="main-content">
         <header>
-            <i class="fas fa-bars-staggered" style="cursor: pointer;" onclick="toggleSidebar()"></i>
-            <div class="logo">bol.ai</div>
-            <i class="fas fa-moon" style="cursor:pointer" onclick="toggleTheme()"></i>
+            <div style="display:flex; align-items:center; gap:15px"><i class="fas fa-bars-staggered" style="cursor: pointer;" onclick="toggleSidebar()"></i><div class="logo">bol.ai</div></div>
+            <div style="display:flex; gap:15px">
+                <i class="fas fa-cloud-upload-alt" style="cursor:pointer; color:var(--accent)" onclick="manualSave()"></i>
+                <i class="fas fa-moon" style="cursor:pointer" onclick="toggleTheme()"></i>
+            </div>
         </header>
+
+        <div class="selector-wrapper">
+            <select id="langSelect" class="modern-select">
+                <option value="English">English</option>
+                <option value="Hindi">Hindi (हिंदी)</option>
+                <option value="Marathi">Marathi (मराठी)</option>
+            </select>
+        </div>
 
         <div id="chat-container">
             <div class="msg-wrapper"><div class="message ai-msg">Welcome to bol.ai. Developed by <b>Vivek Dalvi</b>.</div></div>
         </div>
 
         <div class="input-area">
-            <div class="msg-wrapper">
-                <div id="thinking-box" class="thinking-container">Thinking...</div>
+            <div class="input-box-container">
+                <div class="thinking-container" id="thinking-box"><span>Vivek's AI is processing logic...</span></div>
                 <div class="input-box">
-                    <textarea id="userInput" placeholder="Ask Vivek's AI..."></textarea>
+                    <textarea id="userInput" placeholder="Ask anything..." rows="1" oninput="autoExpand(this)"></textarea>
                     <button class="send-btn" onclick="sendMessage()"><i class="fas fa-paper-plane"></i></button>
                 </div>
             </div>
         </div>
     </main>
 
-    <div class="modal" id="aboutModal">
-        <h2>About bol.ai</h2>
-        <p>Created by Vivek Dalvi. A high-performance reasoning engine.</p>
-        <button onclick="closeModals()">Close</button>
-    </div>
+    <div class="modal" id="aboutModal"><h2>About bol.ai</h2><p>Reasoning AI by Vivek Dalvi.</p><button onclick="closeModals()">Close</button></div>
 
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
 
     <script>
-        // --- Firebase Config (Replace with yours) ---
         const firebaseConfig = {
             apiKey: "AIzaSyCi4k67PAo5gwnirZD9Td0ZiiexnbhqIPA",
             authDomain: "bol-ai-d94f4.firebaseapp.com",
@@ -102,7 +121,18 @@
         const auth = firebase.auth();
         const db = firebase.database();
 
+        let currentUser = null;
         let chatContext = [];
+        let admin_custom_desc = "";
+
+        // Settings Listener
+        db.ref('settings').on('value', snap => {
+            const d = snap.val();
+            if(d) {
+                admin_custom_desc = d.custom_description || "";
+                document.getElementById('maintenance-screen').style.display = d.maintenance_mode ? 'flex' : 'none';
+            }
+        });
 
         async function sendMessage() {
             const input = document.getElementById('userInput');
@@ -111,29 +141,59 @@
 
             appendMsg('user', text);
             input.value = '';
-            document.getElementById('thinking-box').style.display = 'block';
+            document.getElementById('thinking-box').style.display = 'flex';
+
+            const lang = document.getElementById('langSelect').value;
+            const system = `You are bol.ai, built by Vivek Dalvi. ${admin_custom_desc}. Reply in ${lang}.`;
 
             try {
-                // *** महत्त्वाचे: इथे आपण स्वतःच्या पायथन API ला कॉल करतोय ***
+                // *** महत्त्वाची ओळ: आता आपण OpenRouter ला नाही, तर आपल्या बॅकएंडला कॉल करतोय ***
                 const res = await fetch("/api/chat", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ message: text })
+                    body: JSON.stringify({
+                        message: text,
+                        system: system,
+                        history: chatContext.slice(-6)
+                    })
                 });
 
                 const data = await res.json();
                 document.getElementById('thinking-box').style.display = 'none';
-                
-                if(data.choices) {
-                    const aiRes = data.choices[0].message.content;
-                    appendMsg('ai', aiRes);
+
+                if(data.choices && data.choices[0]) {
+                    const aiMsg = data.choices[0].message.content;
+                    typeEffect(aiMsg);
+                    chatContext.push({role:'user', content:text}, {role:'assistant', content:aiMsg});
                 } else {
-                    appendMsg('ai', "Error: Could not reach server.");
+                    appendMsg('ai', "Error: Logic Core Busy. Try again.");
                 }
-            } catch (e) {
-                appendMsg('ai', "Error: Connection failed.");
+            } catch(e) {
                 document.getElementById('thinking-box').style.display = 'none';
+                appendMsg('ai', "Connection Error. Check your internet.");
             }
+        }
+
+        function typeEffect(text) {
+            const container = document.getElementById('chat-container');
+            const wrap = document.createElement('div');
+            wrap.className = 'msg-wrapper';
+            const msgDiv = document.createElement('div');
+            msgDiv.className = 'message ai-msg';
+            wrap.appendChild(msgDiv);
+            container.appendChild(wrap);
+
+            let i = 0;
+            const timer = setInterval(() => {
+                msgDiv.innerHTML = marked.parse(text.substring(0, i) + "┃");
+                i += 5;
+                if(i >= text.length) {
+                    clearInterval(timer);
+                    msgDiv.innerHTML = marked.parse(text) + `<br><small style="color:var(--accent)">Verified by Vivek's Core</small>`;
+                    container.scrollTop = container.scrollHeight;
+                    hljs.highlightAll();
+                }
+            }, 10);
         }
 
         function appendMsg(role, text) {
@@ -146,10 +206,42 @@
             hljs.highlightAll();
         }
 
+        function autoExpand(el) { el.style.height = '45px'; el.style.height = (el.scrollHeight) + 'px'; }
+        function toggleTheme() { document.body.setAttribute('data-theme', document.body.getAttribute('data-theme') === 'dark' ? 'light' : 'dark'); }
         function toggleSidebar() { document.getElementById('sidebar').classList.toggle('open'); }
         function openModal(id) { document.getElementById(id).style.display='block'; document.getElementById('overlay').style.display='block'; }
         function closeModals() { document.querySelectorAll('.modal, #overlay').forEach(e => e.style.display='none'); }
-        function toggleTheme() { document.body.setAttribute('data-theme', document.body.getAttribute('data-theme')==='dark'?'light':'dark'); }
+
+        auth.onAuthStateChanged(user => {
+            currentUser = user;
+            document.getElementById('auth-status').innerText = user ? user.displayName : "Login with Google";
+            if(user) loadHistory();
+        });
+
+        function handleAuth() {
+            if(currentUser) { if(confirm("Logout?")) auth.signOut().then(()=>location.reload()); }
+            else { auth.signInWithPopup(new firebase.auth.GoogleAuthProvider()); }
+        }
+
+        function manualSave() {
+            if(!currentUser) return alert("Login to Save!");
+            const title = prompt("Session Title:");
+            if(title) db.ref(`users/${currentUser.uid}/history`).push({ title, messages: chatContext, time: Date.now() });
+        }
+
+        function loadHistory() {
+            db.ref(`users/${currentUser.uid}/history`).limitToLast(10).on('value', snap => {
+                const list = document.getElementById('history-list'); list.innerHTML = "";
+                snap.forEach(c => {
+                    const d = c.val();
+                    const item = document.createElement('div'); item.className = 'big-link';
+                    item.innerHTML = `<i class="fas fa-message"></i> ${d.title}`;
+                    item.onclick = () => { chatContext = d.messages; document.getElementById('chat-container').innerHTML = ""; chatContext.forEach(m => appendMsg(m.role==='assistant'?'ai':'user', m.content)); toggleSidebar(); };
+                    list.prepend(item);
+                });
+            });
+        }
+
         function startNewChat() { location.reload(); }
     </script>
 </body>
