--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             --glass: rgba(255, 255, 255, 0.05); --border: rgba(255, 255, 255, 0.15);
             --text: #ffffff; --text-dim: #94a3b8; --msg-user: #1e293b; --msg-ai: #0f172a; --card-glow: rgba(0, 242, 255, 0.1);
         }
-
         [data-theme="light"] {
             --bg: #f8fafc; --sidebar-bg: #ffffff; --accent: #0066ff; --secondary: #6200ea;
             --glass: rgba(0, 0, 0, 0.05); --border: rgba(0, 0, 0, 0.1); --text: #0f172a;
@@ -41,8 +40,7 @@
         .big-link:hover { background: var(--glass); color: var(--accent); }
 
         .selector-wrapper { display: flex; gap: 10px; padding: 10px 20px; background: var(--bg); border-bottom: 1px solid var(--border); overflow-x: auto; scrollbar-width: none; }
-        .modern-select { appearance: none; background: var(--msg-user); color: var(--text); border: 1px solid var(--border); padding: 10px 20px; border-radius: 12px; font-size: 0.85rem; cursor: pointer; font-weight: 600; outline: none; min-width: 140px; text-align: center; transition: 0.3s; box-shadow: 0 4px 10px rgba(0,0,0,0.2); }
-        .modern-select:hover { border-color: var(--accent); transform: translateY(-2px); }
+        .modern-select { appearance: none; background: var(--msg-user); color: var(--text); border: 1px solid var(--border); padding: 10px 20px; border-radius: 12px; font-size: 0.85rem; cursor: pointer; font-weight: 600; outline: none; min-width: 140px; text-align: center; }
 
         #main-content { flex: 1; display: flex; flex-direction: column; background: var(--bg); position: relative; width: 100%; }
         header { padding: 15px 25px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--border); }
@@ -54,27 +52,23 @@
         .ai-msg { background: var(--msg-ai); border: 1px solid var(--border); align-self: flex-start; border-bottom-left-radius: 4px; }
         .user-msg { background: var(--msg-user); border: 1px solid var(--accent); align-self: flex-end; border-bottom-right-radius: 4px; }
 
-        .thinking-container { display: none; align-items: center; gap: 12px; padding: 10px 0; margin-bottom: 5px; color: var(--accent); font-weight: 600; font-size: 0.95rem; animation: pulse 1.5s infinite; }
-        .thinking-dots { display: flex; gap: 4px; }
-        .thinking-dots span { width: 8px; height: 8px; background: var(--accent); border-radius: 50%; animation: bounce 1.4s infinite ease-in-out both; }
-        .thinking-dots span:nth-child(1) { animation-delay: -0.32s; }
-        .thinking-dots span:nth-child(2) { animation-delay: -0.16s; }
-
-        @keyframes bounce { 0%, 80%, 100% { transform: scale(0); } 40% { transform: scale(1.0); } }
-        @keyframes pulse { 0% { opacity: 0.6; transform: scale(0.98); } 50% { opacity: 1; transform: scale(1); shadow: 0 0 10px var(--accent); } 100% { opacity: 0.6; transform: scale(0.98); } }
-
+        .thinking-container { display: none; align-items: center; gap: 12px; padding: 10px 0; color: var(--accent); font-weight: 600; }
         .input-area { padding: 25px; background: var(--bg); border-top: 1px solid var(--border); }
-        .input-box-container { max-width: 900px; margin: 0 auto; display: flex; flex-direction: column; gap: 10px; }
-        .input-box { display: flex; background: var(--sidebar-bg); border: 2px solid var(--border); padding: 10px 15px; border-radius: 18px; align-items: flex-end; gap: 10px; transition: 0.3s; }
-        .input-box:focus-within { border-color: var(--accent); box-shadow: 0 0 15px var(--card-glow); }
+        .input-box { display: flex; background: var(--sidebar-bg); border: 2px solid var(--border); padding: 10px 15px; border-radius: 18px; align-items: flex-end; gap: 10px; }
         
-        textarea { flex: 1; background: transparent; border: none; color: var(--text); padding: 10px; outline: none; font-size: 1rem; resize: none; min-height: 45px; max-height: 200px; line-height: 1.5; }
+        textarea { flex: 1; background: transparent; border: none; color: var(--text); padding: 10px; outline: none; font-size: 1rem; resize: none; min-height: 45px; max-height: 200px; }
         .send-btn { background: var(--accent); color: #000; border: none; width: 45px; height: 45px; border-radius: 14px; cursor: pointer; display: grid; place-items: center; transition: 0.3s; }
 
-        #overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.8); backdrop-filter: blur(8px); z-index: 2500; }
-        .modal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 90%; max-width: 600px; background: var(--sidebar-bg); border: 2px solid var(--accent); padding: 40px; border-radius: 25px; z-index: 4000; box-shadow: 0 0 50px rgba(0, 242, 255, 0.2); }
-        .modal h2 { margin-bottom: 20px; font-size: 2rem; color: var(--accent); }
-        .modal p { line-height: 1.8; color: var(--text-dim); margin-bottom: 15px; font-size: 1.1rem; }
+        /* MODALS BIG & BEAUTIFUL */
+        #overlay { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.85); backdrop-filter: blur(10px); z-index: 2500; }
+        .modal { 
+            display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); 
+            width: 95%; max-width: 800px; background: var(--sidebar-bg); border: 2px solid var(--accent); 
+            padding: 50px; border-radius: 30px; z-index: 4000; box-shadow: 0 0 60px rgba(0, 242, 255, 0.3);
+            max-height: 80vh; overflow-y: auto;
+        }
+        .modal h2 { margin-bottom: 25px; font-size: 2.5rem; color: var(--accent); font-weight: 800; border-bottom: 1px solid var(--border); padding-bottom: 10px; }
+        .modal p { line-height: 2; color: var(--text); margin-bottom: 20px; font-size: 1.2rem; }
 
         #maintenance-screen { display: none; position: fixed; inset: 0; background: #000; z-index: 9999; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 20px; }
     </style>
@@ -82,9 +76,9 @@
 <body data-theme="dark">
 
     <div id="maintenance-screen">
-        <i class="fas fa-microchip" style="font-size: 5rem; color: var(--accent); margin-bottom: 20px;"></i>
-        <h1>Logic Core Recalibrating</h1>
-        <p>Vivek Dalvi is optimizing the multi-server network.</p>
+        <i class="fas fa-microchip" style="font-size: 6rem; color: var(--accent); margin-bottom: 20px; animation: pulse 2s infinite;"></i>
+        <h1 style="font-size: 3rem; color: var(--accent);">MANUFACTURING MODE</h1>
+        <p style="font-size: 1.5rem;">Vivek Dalvi is currently upgrading the Reasoning logic. Please wait...</p>
     </div>
 
     <div id="overlay" onclick="closeModals()"></div>
@@ -97,7 +91,7 @@
             <div class="big-link" onclick="openModal('aboutModal')"><i class="fas fa-rocket"></i> About Us</div>
             <div class="big-link" onclick="openModal('privacyModal')"><i class="fas fa-user-shield"></i> Privacy Policy</div>
             <div class="big-link" onclick="openModal('contactModal')"><i class="fas fa-paper-plane"></i> Contact Us</div>
-            <div class="big-link" style="color:var(--accent)" onclick="handleAuth()"><i class="fab fa-google"></i> <span id="auth-status">Login with Google</span></div>
+            <div class="big-link" style="color:var(--accent)" onclick="handleAuth()"><i class="fab fa-google"></i> <span id="auth-status">Login</span></div>
         </div>
     </aside>
 
@@ -105,8 +99,8 @@
         <header>
             <div style="display:flex; align-items:center; gap:15px"><i class="fas fa-bars-staggered" style="font-size: 1.5rem; cursor: pointer;" onclick="toggleSidebar()"></i><div class="logo">bol.ai</div></div>
             <div style="display:flex; gap:15px">
-                <i class="fas fa-cloud-upload-alt" style="cursor:pointer; color:var(--accent); font-size:1.3rem" title="Save Chat" onclick="manualSave()"></i>
-                <i class="fas fa-moon" style="cursor:pointer; font-size:1.3rem" onclick="toggleTheme()"></i>
+                <i class="fas fa-cloud-upload-alt" style="cursor:pointer; color:var(--accent); font-size:1.5rem" title="Save Chat" onclick="manualSave()"></i>
+                <i class="fas fa-moon" style="cursor:pointer; font-size:1.5rem" onclick="toggleTheme()"></i>
             </div>
         </header>
 
@@ -115,51 +109,56 @@
                 <option value="English">English</option>
                 <option value="Hindi">Hindi (हिंदी)</option>
                 <option value="Marathi">Marathi (मराठी)</option>
-                <option value="Chhattisgarhi">Chhattisgarhi (छत्तीसगढ़ी)</option>
-                <option value="Bengali">Bengali (বাংলা)</option>
-                <option value="Telugu">Telugu (తెలుగు)</option>
-                <option value="Tamil">Tamil (தமிழ்)</option>
-                <option value="Kannada">Kannada (ಕನ್ನಡ)</option>
-                <option value="Malayalam">Malayalam (മലയാളം)</option>
-                <option value="Gujarati">Gujarati (ગુજરાતી)</option>
-                <option value="Punjabi">Punjabi (ਪੰਜਾਬੀ)</option>
-                <option value="Odia">Odia (ଓଡ଼ିଆ)</option>
-                <option value="Assamese">Assamese (অসমीया)</option>
-                <option value="Urdu">Urdu (اردو)</option>
-                <option value="Nepali">Nepali (नेपाली)</option>
-                <option value="Chinese (Mandarin)">Chinese</option>
-                <option value="Sanskrit">Sanskrit (संस्कृतम्)</option>
-                <option value="Konkani">Konkani (कोंकणी)</option>
-                <option value="Maithili">Maithili (मैथिली)</option>
-                <option value="Sindhi">Sindhi (सिंधी)</option>
-                <option value="Kashmiri">Kashmiri (कश्मीरी)</option>
-                <option value="Manipuri">Manipuri</option>
-                <option value="Bodo">Bodo (बड़ो)</option>
-                <option value="Santali">Santali (संताली)</option>
+                <option value="Spanish">Spanish</option>
+                <option value="French">French</option>
+                <option value="German">German</option>
+                <option value="Japanese">Japanese</option>
+                <option value="Russian">Russian</option>
+                <option value="Bengali">Bengali</option>
+                <option value="Telugu">Telugu</option>
+                <option value="Tamil">Tamil</option>
+                <option value="Urdu">Urdu</option>
             </select>
-            <select id="serverSelect" class="modern-select"><option value="auto">Secure Auto-Rotate</option></select>
+            <select id="serverSelect" class="modern-select"><option value="auto">Secure Rotation Enabled</option></select>
         </div>
 
         <div id="chat-container">
-            <div class="msg-wrapper"><div class="message ai-msg"><h3>Welcome to bol.ai</h3><p>I am a reasoning engine developed by <b>Vivek Dalvi</b>. How can I assist you today?</p></div></div>
+            <div class="msg-wrapper"><div class="message ai-msg"><h3>Welcome to bol.ai Reasoning Engine</h3><p>I am developed by <b>Vivek Dalvi</b>. My logic is now distributed across multiple secure clouds.</p></div></div>
         </div>
 
         <div class="input-area">
             <div class="input-box-container">
-                <div class="thinking-container" id="thinking-box"><div class="thinking-dots"><span></span><span></span><span></span></div><span>Vivek's AI is processing logic...</span></div>
+                <div class="thinking-container" id="thinking-box"><span>Processing Logic via Vivek's Secure Cloud...</span></div>
                 <div class="input-box">
-                    <textarea id="userInput" placeholder="Ask anything here..." rows="1" oninput="autoExpand(this)"></textarea>
+                    <textarea id="userInput" placeholder="Ask Vivek's AI anything..." rows="1" oninput="autoExpand(this)"></textarea>
                     <button class="send-btn" onclick="sendMessage()"><i class="fas fa-paper-plane"></i></button>
                 </div>
-                <div style="text-align: center; font-size: 0.7rem; color: var(--text-dim);">Created by Vivek Dalvi | © 2025 bol.ai All Rights Reserved</div>
             </div>
         </div>
     </main>
 
-    <!-- Modals -->
-    <div class="modal" id="aboutModal"><i class="fas fa-times" style="float:right; cursor:pointer" onclick="closeModals()"></i><h2>About bol.ai</h2><p><b>bol.ai</b> is the world's most dedicated Reasoning AI, developed solely by <b>Vivek Dalvi</b>.</p></div>
-    <div class="modal" id="privacyModal"><i class="fas fa-times" style="float:right; cursor:pointer" onclick="closeModals()"></i><h2>Privacy Policy</h2><p>1. <b>Zero Auto-Log:</b> We do not save your chats unless you manually click "Save".</p><p>2. <b>Security:</b> All data via Firebase.</p></div>
-    <div class="modal" id="contactModal"><i class="fas fa-times" style="float:right; cursor:pointer" onclick="closeModals()"></i><h2>Contact Support</h2><p>Vivek Dalvi: vcoder7311@gmail.com</p></div>
+    <!-- BIG MODALS -->
+    <div class="modal" id="aboutModal">
+        <i class="fas fa-times" style="float:right; cursor:pointer; font-size: 2rem;" onclick="closeModals()"></i>
+        <h2>About bol.ai</h2>
+        <p><b>bol.ai</b> represents the pinnacle of Reasoning AI, meticulously crafted and maintained by <b>Vivek Dalvi</b>.</p>
+        <p>This platform utilizes a complex multi-server infrastructure, ensuring that your queries are processed with maximum speed and logical precision. Every response is verified through our proprietary Secure Cloud Core.</p>
+    </div>
+
+    <div class="modal" id="privacyModal">
+        <i class="fas fa-times" style="float:right; cursor:pointer; font-size: 2rem;" onclick="closeModals()"></i>
+        <h2>Privacy & Security</h2>
+        <p>1. <b>Data Ownership:</b> Your data belongs to you. We do not store any logs unless you manually save them to your profile.</p>
+        <p>2. <b>Encryption:</b> Every interaction is protected by Vivek's Secure Cloud encryption layer.</p>
+        <p>3. <b>Zero Leakage:</b> Your API calls are routed through a secure backend, keeping your identity anonymous.</p>
+    </div>
+
+    <div class="modal" id="contactModal">
+        <i class="fas fa-times" style="float:right; cursor:pointer; font-size: 2rem;" onclick="closeModals()"></i>
+        <h2>Global Support</h2>
+        <p>For strategic partnerships or technical inquiries, contact the creator:</p>
+        <p style="color:var(--accent); font-size: 1.8rem; font-weight: 800;"><i class="fas fa-envelope"></i> vcoder7311@gmail.com</p>
+    </div>
 
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
@@ -195,29 +194,30 @@
             document.getElementById('thinking-box').style.display = 'flex';
 
             const lang = document.getElementById('langSelect').value;
-            const system = `You are bol.ai, built by Vivek Dalvi. ${admin_custom_desc}. Reply in ${lang}. Master: Vivek Dalvi.`;
+            const system = `You are bol.ai, built by Vivek Dalvi. ${admin_custom_desc}. Master: Vivek Dalvi. Reply in ${lang}.`;
 
             try {
                 const res = await fetch("/api/chat", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ message: text, system_prompt: system, history: chatContext.slice(-6) })
+                    body: JSON.stringify({ message: text, system: system, history: chatContext.slice(-6) })
                 });
 
                 const data = await res.json();
                 document.getElementById('thinking-box').style.display = 'none';
 
-                if(res.status === 429) return showError("All keys reached limit. Wait 1 min.");
+                if(res.status === 429) return showError("All API clouds are temporarily at capacity. Try in 60s.");
                 
                 if(data.choices && data.choices[0]) {
                     const aiMsg = data.choices[0].message.content;
-                    typeEffect(aiMsg);
+                    // API_INDEX बॅकएंडकडून मिळेल
+                    typeEffect(aiMsg, data.api_index || "Cloud Core");
                     chatContext.push({role:'user', content:text}, {role:'assistant', content:aiMsg});
-                } else { showError("Logic Error. Retry."); }
-            } catch(e) { showError("Connection Failed."); }
+                } else { showError("Reasoning timed out. Retry."); }
+            } catch(e) { showError("Secure Connection Failed."); }
         }
 
-        function typeEffect(text) {
+        function typeEffect(text, apiIdx) {
             const container = document.getElementById('chat-container');
             const wrap = document.createElement('div'); wrap.className = 'msg-wrapper';
             const msgDiv = document.createElement('div'); msgDiv.className = 'message ai-msg';
@@ -228,7 +228,7 @@
                 i += 5;
                 if(i >= text.length) {
                     clearInterval(timer);
-                    msgDiv.innerHTML = marked.parse(text) + `<br><small style="color:var(--accent); opacity:0.6">Verified by bol.ai Cloud Core</small>`;
+                    msgDiv.innerHTML = marked.parse(text) + `<br><small style="color:var(--accent); font-weight:800; border-top:1px solid var(--border); display:block; padding-top:5px; margin-top:10px;">Verified by Vivek's Secure Cloud ${apiIdx}</small>`;
                     container.scrollTop = container.scrollHeight;
                     hljs.highlightAll();
                 }
@@ -252,10 +252,7 @@
         auth.onAuthStateChanged(user => {
             currentUser = user;
             document.getElementById('auth-status').innerText = user ? user.displayName : "Login with Google";
-            if(user) {
-                db.ref(`users/${user.uid}`).update({ name: user.displayName, email: user.email, photo: user.photoURL, lastLogin: new Date().toLocaleString() });
-                loadHistory();
-            }
+            if(user) loadHistory();
         });
 
         function handleAuth() { if(currentUser) { if(confirm("Logout?")) auth.signOut().then(()=>location.reload()); } else { auth.signInWithPopup(new firebase.auth.GoogleAuthProvider()); } }
@@ -271,8 +268,9 @@
                 });
             });
         }
-        function startNewChat() { chatContext = []; document.getElementById('chat-container').innerHTML = `<div class="msg-wrapper"><div class="message ai-msg">New session started. How can I assist you?</div></div>`; if(window.innerWidth < 768) toggleSidebar(); }
-        function showError(msg) { document.getElementById('thinking-box').style.display = 'none'; appendMsg('ai', `<span style="color:var(--error)">${msg}</span>`); }
+        function startNewChat() { location.reload(); }
+        function showError(msg) { document.getElementById('thinking-box').style.display = 'none'; appendMsg('ai', `<span style="color:red; font-weight:800">${msg}</span>`); }
     </script>
 </body>
 </html>
+                                                                                       </html>
