--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <span class="close-modal-btn" onclick="closeModals()">&times;</span>
         <h2>About</h2>
         <p><b>bol.ai</b> is a high-performance reasoning engine designed and built from the ground up by <b>Vivek Dalvi</b>.</p>
-        <p>By integrating distributed cloud architectures and specialized logic gates, bol.ai achieves human-like reasoning in over 49 languages. Version 2.0 focuses on ultra-fast processing and advanced mathematical accuracy.</p>
+        <p>By integrating distributed cloud architectures and specialized logic gates, bol.ai achieves human-like reasoning in over 40+ languages. Version 2.0 focuses on ultra-fast processing and advanced mathematical accuracy.</p>
     </div>
 
     <div class="modal" id="privacyModal">
