--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
             
             const footer = document.createElement('div');
             footer.className = 'msg-footer';
-            footer.innerHTML = `<span>API: ${apiIdx}</span><span class="token-count">Tokens: ${tokens}</span>`;
+            footer.innerHTML = `<span>server: ${apiIdx}</span><span class="token-count">Tokens: ${tokens}</span>`;
             msgDiv.appendChild(footer);
 
             processAIResponse(msgDiv);
