--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>bol-ai | Global Reasoning Engine 1.0</title>
-    
+
+    <-- Google adsense script code -->
+        
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8245080797948411"
+     crossorigin="anonymous"></script>
     <!-- 
         ARCHITECT: VIVEK DALVI
         SYSTEM: BOL.AI REASONING CORE
