--- a/index.html
+++ b/index.html
@@ -534,7 +534,8 @@
                     btn.className = originalClass;
                     btn.style.color = "";
                 }, 2000);
-            }).catch(err => customAlert("Failed to copy!"));
+            }).catch(err => customAlert("Failed to copy! <p>Visit bol-ai.vercel.app to use this tool.
+You can copy this text or download it as a file.</p>"));
         }
 
         window.downloadCode = function(btn) {
